- window position & size will be saved for next start
- does not automatically set Windows-Style => allows any styles (such as Liquid)
- Yammi finally gets an individual icon (for titlebar and kicker)
- toolbutton + key-combination (SHIFT-F7) for playing a song immediately without crossfading
- bugfix: defined playlist plugins show up in context menu now


#######################
19.5.   version 0.5.3 !!!

- changed database format: primary key now is artist + title + album!!!
	(The necessary updates to your categories and history file will be done automatically
	on first start.)
- corrected the format of the database XML file (was not 100% correct XML)
  (Will be corrected automatically on first start, too.)

=> future versions of Yammi will not be able to read a song database saved with
a Yammi version 0.5.2 or earlier!

- probably last version based on qt2.x, next version will require qt3.x

- changed format of history file to XML
- history file will be updated on database changes (to keep consistency)
- improved "update song database" function, should behave more consistent now
- replaced most of the system calls with the corresponding QT calls
- added skip backward functionality (moves songs from folder SongsPlayed to Playlist)
- adding songs to folder "Songs Played" is now done after they have been played, not before
- changed shift/ctrl+left click to shift/ctrl+middle click
  (as shift/ctrl+left is needed for standard listbox operations)
- added progress dialog to "burning media"
- fixed a few bugs


#######################
28.4.   version 0.5.2 !!!

- a few bug fixes related to jukebox functionality
- added progress dialogs+cancel possibility to operations that might take longer
- added shift/ctrl + left click for configurable actions, all actions configurable now

#######################
17.4.   version 0.5.1 !!!

- added jukebox functionality:
  - additional toolbar with needed media / load button
  - "Scan removable media" entry in file menu