@@ -3,27 +3,30 @@
 <KDevPrjSession>
  <LastCompileConfig>(Default)</LastCompileConfig>
  <Mainframe MaximizeMode="1" />
- <DocsAndViews NumberOfDocuments="7" >
-  <Doc0 CursorPosLine="1918" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/yammigui.cpp" >
+ <DocsAndViews NumberOfDocuments="8" >
+  <Doc0 CursorPosLine="1033" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="26" FileName="/home/oliver/work/programming/yammi/yammi/yammigui.cpp" >
    <View0 Top="23" Width="400" Attach="1" Height="300" Left="3" Focus="0" Type="KWriteView" MinMaxMode="0" />
   </Doc0>
   <Doc1 CursorPosLine="20" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="1" FileName="/home/oliver/work/programming/yammi/yammi/main.cpp" >
-   <View0 Top="107" Width="758" Attach="1" Height="424" Left="87" Focus="0" Type="KWriteView" MinMaxMode="0" />
+   <View0 Top="44" Width="758" Attach="1" Height="424" Left="24" Focus="0" Type="KWriteView" MinMaxMode="0" />
   </Doc1>
   <Doc2 CursorPosLine="17" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="35" FileName="/home/oliver/work/programming/yammi/todo" >
-   <View0 Top="105" Width="764" Attach="1" Height="450" Left="105" Focus="1" Type="KWriteView" MinMaxMode="2" />
+   <View0 Top="65" Width="758" Attach="1" Height="424" Left="45" Focus="0" Type="KWriteView" MinMaxMode="0" />
   </Doc2>
   <Doc3 CursorPosLine="27" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="31" FileName="/home/oliver/work/programming/yammi/CHANGELOG" >
-   <View0 Top="149" Width="758" Attach="1" Height="424" Left="129" Focus="0" Type="KWriteView" MinMaxMode="0" />
+   <View0 Top="86" Width="758" Attach="1" Height="424" Left="66" Focus="0" Type="KWriteView" MinMaxMode="0" />
   </Doc3>
   <Doc4 CursorPosLine="286" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="38" FileName="/home/oliver/work/programming/yammi/yammi/yammigui.h" >
-   <View0 Top="275" Width="758" Attach="1" Height="408" Left="255" Focus="0" Type="KWriteView" MinMaxMode="0" />
+   <View0 Top="107" Width="758" Attach="1" Height="424" Left="87" Focus="0" Type="KWriteView" MinMaxMode="0" />
   </Doc4>
-  <Doc5 CursorPosLine="41" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/song.h" >
-   <View0 Top="149" Width="758" Attach="1" Height="409" Left="129" Focus="0" Type="KWriteView" MinMaxMode="0" />
+  <Doc5 CursorPosLine="33" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="23" FileName="/home/oliver/work/programming/yammi/yammi/song.h" >
+   <View0 Top="128" Width="758" Attach="1" Height="424" Left="108" Focus="0" Type="KWriteView" MinMaxMode="0" />
   </Doc5>
-  <Doc6 Type="CDocBrowser" NumberOfViews="1" FileName="/usr/lib/qt3/doc/html//qspinbox.html#valueChanged" >
-   <View Top="44" Width="124" Attach="1" Height="116" Left="297" Focus="0" Type="KHTMLView" MinMaxMode="0" />
+  <Doc6 CursorPosLine="42" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="39" FileName="/home/oliver/work/programming/yammi/yammi/prefs.cpp" >
+   <View0 Top="149" Width="758" Attach="1" Height="409" Left="129" Focus="0" Type="KWriteView" MinMaxMode="0" />
   </Doc6>
+  <Doc7 CursorPosLine="649" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="72" FileName="/home/oliver/work/programming/yammi/yammi/docs/en/index.sgml" >
+   <View0 Top="147" Width="764" Attach="1" Height="435" Left="147" Focus="1" Type="KWriteView" MinMaxMode="2" />
+  </Doc7>
  </DocsAndViews>
 </KDevPrjSession>
